--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <title>耦合擺動畫（SI制）</title>
+  <title>耦合擺動畫</title>
   <style>
     body {
       font-family: sans-serif;
@@ -74,7 +74,7 @@
     // 像素/公尺比率（1m = 150px）
     const pixelsPerMeter = 150;
 
-    // 擺長 (以公尺為單位)
+    // 擺長 (公尺)
     const L = 1.0;
 
     const originX1 = 200;
@@ -97,10 +97,13 @@
 
     let running = false;
 
-    let theta1 = 0.3; // 初始角度 (rad)
+    // 初始角度 (rad)
+    let theta1 = 0.3;
     let theta2 = 0;
-    let omega1 = 0;   // 角速度 (rad/s)
+    // 初始角速度 (rad/s)
+    let omega1 = 0;
     let omega2 = 0;
+
     let lastTime = null;
 
     function resetSystem() {
@@ -118,18 +121,20 @@
       m2 = parseFloat(mass2Slider.value);
       k = parseFloat(kSlider.value);
 
-      mass1Label.textContent = m1;
-      mass2Label.textContent = m2;
-      kLabel.textContent = k;
+      mass1Label.textContent = m1.toFixed(1);
+      mass2Label.textContent = m2.toFixed(1);
+      kLabel.textContent = k.toFixed(1);
 
+      // 簡化週期與角頻率估算（簡諧耦合近似）
       const mu = (m1 * m2) / (m1 + m2);
-      const omega = Math.sqrt(k / mu); // 角頻率 rad/s
+      const omega = Math.sqrt(k / mu);
       const T = 2 * Math.PI / omega;
 
       periodDisplay.textContent = T.toFixed(2);
       omegaDisplay.textContent = omega.toFixed(2);
     }
 
+    // 繪製彈簧的函式 (鋸齒線表示)
     function drawSpring(x1, y1, x2, y2, coils = 15, amplitude = 6) {
       const dx = x2 - x1;
       const dy = y2 - y1;
@@ -159,42 +164,41 @@
     function draw() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-      // 用擺長 L (公尺) 計算位移後轉成像素
+      // 將角度與擺長換算為像素位置
       const x1 = originX1 + Math.sin(theta1) * L * pixelsPerMeter;
       const y1 = originY + Math.cos(theta1) * L * pixelsPerMeter;
       const x2 = originX2 + Math.sin(theta2) * L * pixelsPerMeter;
       const y2 = originY + Math.cos(theta2) * L * pixelsPerMeter;
 
-      // 擺線
+      // 繪製擺線與質點
       ctx.beginPath();
       ctx.moveTo(originX1, originY);
       ctx.lineTo(x1, y1);
       ctx.stroke();
 
       ctx.beginPath();
-      ctx.moveTo(originX2, originY);
-      ctx.lineTo(x2, y2);
-      ctx.stroke();
-
-      // 質點
-      ctx.beginPath();
       ctx.arc(x1, y1, 15, 0, Math.PI * 2);
       ctx.fillStyle = "red";
       ctx.fill();
+
+      ctx.beginPath();
+      ctx.moveTo(originX2, originY);
+      ctx.lineTo(x2, y2);
+      ctx.stroke();
 
       ctx.beginPath();
       ctx.arc(x2, y2, 15, 0, Math.PI * 2);
       ctx.fillStyle = "blue";
       ctx.fill();
 
-      // 螺旋彈簧
+      // 繪製彈簧
       drawSpring(x1, y1, x2, y2);
     }
 
     function updatePhysics(dt) {
-      const g = 9.8; // m/s^2
+      const g = 9.8; // 重力加速度 m/s^2
 
-      // 耦合彈簧扭力 (簡化模型)
+      // 耦合彈簧扭力簡化模型
       const deltaTheta = theta2 - theta1;
       const springTorque1 = k * deltaTheta;
       const springTorque2 = -k * deltaTheta;
@@ -226,9 +230,22 @@
       draw();
     }
 
-    // 初始化
+    // 初始化顯示與動畫
     updateDisplay();
     requestAnimationFrame(animate);
 
-    // 控制綁定
-    mass1Slider.addEvent
+    // 事件綁定
+    mass1Slider.addEventListener("input", updateDisplay);
+    mass2Slider.addEventListener("input", updateDisplay);
+    kSlider.addEventListener("input", updateDisplay);
+
+    document.getElementById('startBtn').onclick = () => {
+      running = true;
+    };
+
+    document.getElementById('resetBtn').onclick = () => {
+      resetSystem();
+    };
+  </script>
+</body>
+</html>
