--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <title>耦合擺動畫（正確物理模型）</title>
+  <title>耦合擺</title>
   <style>
     body {
       font-family: sans-serif;
